# rust-simple-ecomm-api

./: .gitignore  Cargo.toml  README.md
.sqlx/: query-833357ff8bda0c5f02f26708b550cf315b8505ae4ab8a85c3d74b6997fbe8a00.json
migrations/: 20260125102350_create_categories_table.sql  20260125102351_create_products_table.sql  20260127155540_create_product_has_categories_table.sql  20260127155541_create_users_table.sql  20260127155542_create_user_hashes_table.sql  20260127155726_create_personal_access_tokens_table.sql  20260202191804_create_cart_table.sql  20260202210638_create_cart_items_table.sql  20260204102028_create_roles_table.sql  20260204102428_create_user_has_roles_table.sql  20260215163238_create_product_images_table.sql  20260215164005_create_product_videos_table.sql  20260215164015_create_product_review_status_enum.sql  20260215164016_create_product_reviews_table.sql  20260215164531_create_product_review_replies_table.sql  20260215164553_create_product_review_attachments_table.sql
src/: extractors.rs  lib.rs  main.rs  pagination.rs  state.rs  storage.rs  traits.rs  validation_utils.rs
src/admin/: mod.rs  routes.rs
src/app/: mod.rs
src/auth/: dto.rs  handler.rs  mod.rs  model.rs  repository.rs  routes.rs  service.rs  traits.rs
src/cart/: dto.rs  handler.rs  mod.rs  model.rs  repository.rs  routes.rs  service.rs
src/categories/: dto.rs  model.rs  repository.rs  service.rs  traits.rs
src/db/: seeders.rs
src/errors/: error.rs  response.rs
src/middlewares/: auth.rs  guest.rs
tests/: admin_category_tests.rs  admin_product_images_tests.rs  admin_product_tests.rs  admin_product_videos_tests.rs  admin_review_tests.rs  category_tests.rs  product_repository_test.rs  product_tests.rs  review_tests.rs  user_cart_tests.rs
(+169 files in other folders)
