[package]
name = "ecomm"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "macros", "chrono"] }
dotenvy = "0.15"
chrono = { version = "0.4.43", features = ["serde"] }
validator = { version = "0.20", features = ["derive"] }
