[package]
name = "ecomm"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.12.1"
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "macros", "chrono"] }
dotenvy = "0.15.7"
chrono = { version = "0.4.43", features = ["serde"] }
validator = { version = "0.20", features = ["derive"] }
thiserror = "2.0.18"
argon2 = "0.6.0-rc.6"
env_logger = "0.11.8"
log = "0.4.29"
futures-util = "0.3.31"
uuid = { version = "1.20.0", features = ["v4"] }
serde_json = "1.0.149"
